<resources>
    <string name="app_name">BookCorner</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="categorie_actiune">Actiune</string>
    <string name="categorie_sanatate">Sanatate</string>
    <string name="categorie_afaceri">Afaceri</string>
    <string name="categorie_dezvoltare_personala">Dezvoltare Personala</string>
    <string name="categorie_locatii">Locatii Magazine</string>
    <string name="categorie_contact">Contact</string>
    <string name="title_activity_display_book">DisplayBookActivity</string>
    <string name="title_activity_locatii">Map</string>
    <string name="appwidget_text">BookCorner recomanda:</string>
    <string name="add_widget">Add widget</string>
</resources>
