<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <!--Adaugare iconite noi-->

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_categorie_sanatate"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/categorie_sanatate" />
        <item
            android:id="@+id/nav_categorie_dezvoltare_personala"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/categorie_dezvoltare_personala" />
        <item
            android:id="@+id/nav_categorie_actiune"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/categorie_actiune" />
        <item
            android:id="@+id/nav_categorie_afaceri"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/categorie_afaceri" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_categorie_preferate"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/categorie_preferate" />
            <item
                android:id="@+id/nav_categorie_contact"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/categorie_contact" />
        </menu>
    </item>

</menu>
